ocn: gestures: Adapt to S style
 * Use Theme.SubSettingsBase for theme
 * Replace PreferenceActivity with CollapsingToolbarBaseActivity

Change-Id: Ic879ce61d83a33da12829008a4336c8a23230d63
(cherry picked from commit https://github.com/TARKZiM/android_device_htc_ocn/commit/1d40391fb558ebcf027c2b6848e16c19c079f8ec)

--- a/gestures/AndroidManifest.xml
+++ b/gestures/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application android:label="GestureHandler"
-            android:theme="@style/Theme.Main"
+            android:theme="@style/Theme.SubSettingsBase"
             android:hardwareAccelerated="true"
             android:supportsRtl="true"
             android:defaultToDeviceProtectedStorage="true"
