--- a/gestures/AndroidManifest.xml
+++ b/gestures/AndroidManifest.xml
@@ -19,7 +19,8 @@
             android:allowBackup="true"
             android:persistent="true">
 
-        <receiver android:name="org.lineageos.settings.device.BootReceiver">
+        <receiver android:name="org.lineageos.settings.device.BootReceiver"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -32,7 +33,8 @@
 
         <activity
             android:name=".EdgeSenseSettingsActivity"
-            android:label="@string/gesture_edge_sense_title">
+            android:label="@string/gesture_edge_sense_title"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
@@ -46,7 +48,8 @@
 
         <activity
             android:name=".ScreenOffGestureSettingsActivity"
-            android:label="@string/gesture_screen_off_title">
+            android:label="@string/gesture_screen_off_title"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
