--- a/touch/vendor.lineage.touch@1.0-service.ocn.rc
+++ b/touch/vendor.lineage.touch@1.0-service.ocn.rc
@@ -2,6 +2,9 @@ on boot
     chmod 0660 /sys/android_touch/glove_setting
     chown system system /sys/android_touch/glove_setting
 
+    # Capacitive key disabler permissions
+    chown system system /sys/android_cap/enabled
+
 service touch-hal-1-0 /vendor/bin/hw/vendor.lineage.touch@1.0-service.ocn
     interface vendor.lineage.touch@1.0::IGloveMode default
     class hal
